Revert "icons fix"
This reverts commit 6b8773588585a2ef88fec41c8a876ec240bc2ca7.

--- a/src/app/components/modify-place/modify-place.component.html
+++ b/src/app/components/modify-place/modify-place.component.html
@@ -5,7 +5,7 @@
     <div id="modal-top">
         <h2 class="mat-h2"> Edytuj miejscówkę </h2>
         <button id="close" mat-icon-button (click)="closeDialog()">
-            <mat-icon class="material-icons" svgIcon="close"></mat-icon>
+            <mat-icon class="material-icons">close</mat-icon>
         </button>
     </div>
 
