--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -68,12 +68,11 @@
                     margin-top: 2%;
                 }
 
-                .mat-icon {
-                    height: 28px;
-                    width: 28px;
+                .material-icons {
+                    font-size: 36px;
                     cursor: pointer;
-                    margin-right: 3%;
-                    margin-top: 1%;
+                    margin-right: 6%;
+                    margin-top: 0;
                 }
             }
         }
