--- a/src/app/components/administrator/administrator.component.html
+++ b/src/app/components/administrator/administrator.component.html
@@ -7,7 +7,7 @@
                 matInput 
                 (keyup)="applyFilter($event)"
                 formControlName="placeName">
-              <mat-icon matSuffix svgIcon="search"></mat-icon>
+              <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
           </p>
           <p>
@@ -69,10 +69,10 @@
             <div>
               <div>
                 <button *ngxPermissionsOnly="['EDIT_PLACE']" mat-icon-button color="primary" (click)="modifyPlace(element)">
-                  <mat-icon svgIcon="edit"></mat-icon>
+                  <mat-icon>edit</mat-icon>
                 </button>
                 <button *ngxPermissionsOnly="['DELETE_PLACE']" mat-icon-button color="warn" (click)="deletePlace(element)">
-                  <mat-icon svgIcon="delete"></mat-icon>
+                  <mat-icon>delete</mat-icon>
                 </button>
               </div>
             </div>
