--- a/src/app/components/place-details/place-details.component.scss
+++ b/src/app/components/place-details/place-details.component.scss
@@ -40,9 +40,8 @@
                 display: flex;
                 flex-direction: row;
 
-                .mat-icon {
-                    height: 30px;
-                    width: 30px;
+                .material-icons {
+                    font-size: 30px;
                 }
             }
 
@@ -124,12 +123,11 @@
                     margin-top: 2%;
                 }
     
-                .mat-icon {
-                    height: 36px;
-                    width: 36px;
+                .material-icons {
+                    font-size: 36px;
                     cursor: pointer;
                     margin-right: 6%;
-                    margin-top: 1%;
+                    margin-top: 0;
                 }
             }
         }
