--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@
 // have to load a single css file for Angular Material in your app.
 
 // Fonts
+@import 'https://fonts.googleapis.com/css?family=Material+Icons';
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
      
 $fontConfig: (
@@ -253,8 +254,7 @@ $altTheme: (
 }
 
 .material-icons {
-  height: 24px;
-  width: 24px;
+  font-size: 24px;
   font-family: 'Material Icons', 'Material Icons';  
   .mat-badge-content {
     font-family: 'Roboto';
